--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 </head>
 <body>
     <div id="root"></div>
-    <script type="text/babel" data-presets="react,typescript" src="/index.tsx"></script>
+    <script type="text/babel" data-type="module" data-presets="react,typescript" src="/index.tsx"></script>
     <noscript>Necesitas activar JavaScript para usar esta aplicación.</noscript>
 </body>
 </html>
