feat: Add process.env polyfill for browser
Adds a simple polyfill for `process.env` to prevent runtime errors in browser environments where Node.js-specific variables might be accessed. This ensures the application can run without issues in the browser.

--- a/index.html
+++ b/index.html
@@ -9,6 +9,12 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Archivo+Black&family=Space+Mono&display=swap" rel="stylesheet">
+    <script>
+      // Polyfill for process.env to prevent app crash in browser environments
+      if (typeof window.process === 'undefined') {
+        window.process = { env: {} };
+      }
+    </script>
     <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
     <script src="https://cdn.tailwindcss.com"></script>
     <script>
